--- a/static/css/local.css
+++ b/static/css/local.css
@@ -42,8 +42,8 @@ div.login-box img {
 }
 
 
-div.partners-box img {
-    height: 200px;
+div.logo-box img {
+    width: 60%;
 }
 
 section {
@@ -60,6 +60,9 @@ section.bg-primary {
     color: #FFF;
 }
 
-.fa-ul>li {
+span.fa-li {
     display: inline-block;
+    position: relative;
+    left: -0.5rem;
+    margin-bottom: 1rem;
 }
