--- a/static/css/local.css
+++ b/static/css/local.css
@@ -50,16 +50,28 @@ section {
     padding: 100px 0;
 }
 
+section h1 {
+   font-size: 2rem;
+}
+
 hr.primary {
     border-color: #3a22a6;
     border-width: 3px;
     max-width: 50px;
 }
 
-section.bg-primary {
-    color: #FFF;
+section.dark {
+    color: white;
+    background-color: navy;
 }
 
+section.dark p {
+    text-align: center;
+}
+
+section.dark a {
+  color: #eb3812;    
+}
 span.fa-li {
     display: inline-block;
     position: relative;
