--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,7 +9,7 @@
       <div id="content">
       {{- block "main" . }}{{- end }}
       </div>
-      {{- partial "footer.html" . -}}
+      {{- partial "foot.html" . -}}
       {{- partial "script.html" . -}}
     </body>
 </html>
