--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,8 +17,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
-  <link href="css/local.css" rel="stylesheet" type="text/css" />
-
+  {{ range .Site.Params.custom_css -}}
+  <link href="{{ . | absURL }}" rel="stylesheet" type="text/css" />
+  {{ end }}
 
   <title>{{ if not .IsHome }}{{ .Title }} | {{ end }}{{ site.Title }}</title>
 
